--- a/DeepRack/appsettings.json
+++ b/DeepRack/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host={host};Port={port};Database={database};Username={username};Password={password}"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=deeprack;Username=postgres;Password=0811"
   },
   "Logging": {
     "LogLevel": {
