Fixed Connection String

--- a/DeepRack/appsettings.json
+++ b/DeepRack/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=deeprack;Username=postgres;Password=0811"
+    "DefaultConnection": "Host=localhost;Port={PORT};Database={DATABASE};Username={USERNAME};Password={PASSWORD}"
   },
   "Logging": {
     "LogLevel": {
